Serve static files and fix root route

--- a/bat/bus-arr.html
+++ b/bat/bus-arr.html
@@ -241,10 +241,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                    </tr>
+                    <!-- Rows will be dynamically added here -->
                 </tbody>
             </table>
 
@@ -302,44 +299,41 @@
 
 
     <script>
-const fetchBusArrivals = async () => {
-    try {
-        const baseUrl = "https://bat-lta-5a035f9d4a02.herokuapp.com";
-        const response = await fetch(`${baseUrl}/get-bus-arrivals`);
-        console.log('Response status:', response.status); // Log the response status
+        const fetchBusArrivals = async () => {
+            const tableBody = document.querySelector('tbody');
+            tableBody.innerHTML = '<tr><td colspan="2">Loading...</td></tr>'; // Show loading message
 
-        if (!response.ok) {
-            throw new Error(`HTTP error! status: ${response.status}`);
-        }
+            try {
+                const baseUrl = "https://bat-lta-5a035f9d4a02.herokuapp.com";
+                const response = await fetch(`${baseUrl}/get-bus-arrivals`);
 
-        const data = await response.json();
-        console.log('Fetched data:', data); // Log the fetched data
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
 
-        // Get the table body element
-        const tableBody = document.querySelector('tbody');
-        tableBody.innerHTML = ''; // Clear existing rows
+                const data = await response.json();
+                tableBody.innerHTML = ''; // Clear loading message
 
-        // Populate the table with data
-        data.forEach((service) => {
-            const row = document.createElement('tr');
-            row.innerHTML = `
+                data.forEach((service) => {
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
                 <td>${service.serviceno}</td>
                 <td>${new Date(service.estimatedarrival).toLocaleString()}</td>
             `;
-            tableBody.appendChild(row);
-        });
-    } catch (error) {
-        console.error('Error fetching bus arrivals:', error);
-    }
-};
+                    tableBody.appendChild(row);
+                });
+            } catch (error) {
+                console.error('Error fetching bus arrivals:', error);
+                tableBody.innerHTML = '<tr><td colspan="2">Error loading data</td></tr>'; // Show error message
+            }
+        };
 
-// Call the function to fetch and display data
-fetchBusArrivals();
+        fetchBusArrivals();
 
-// Fetch new data every 30 seconds
-setInterval(() => {
-    fetchBusArrivals();
-}, 30000); // 30000 milliseconds = 30 seconds
+        // Fetch new data every 30 seconds
+        setInterval(() => {
+            fetchBusArrivals();
+        }, 30000); // 30000 milliseconds = 30 seconds
     </script>
 
 </body>
