--- a/bat/bat.html
+++ b/bat/bat.html
@@ -236,7 +236,9 @@
 <table class="table">
   <thead>
     <tr>
-
+    </tr>
+  </thead>
+  <tbody>
       <th scope="col">Services</th>
       <th scope="col">Departure Times</th>
 
@@ -244,8 +246,7 @@
   </thead>
   <tbody>
     <tr>
-      <td>Mark</td>
-      <td>Otto</td>
+
     </tr>
   </tbody>
 </table>
@@ -277,32 +278,32 @@
         </div>
     </footer>
 
-    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
+    <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
         data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="js/navtabs.js"></script>
+    <script src="../js/navtabs.js"></script>
 
-    <script src="js/theme-subPages.js"></script>
+    <script src="../js/theme-subPages.js"></script>
 
-    <script src="js/jquery.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
 
-    <script src="js/popper.min.js"></script>
+    <script src="../js/popper.min.js"></script>
 
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
-    <script src="js/pw.bundle.js"></script>
+    <script src="../js/pw.bundle.js"></script>
 
-    <script src="js/default-assets/active.js"></script>
+    <script src="../js/default-assets/active.js"></script>
 
-    <script src="js/isotope.pkgd.min.js"></script>
+    <script src="../js/isotope.pkgd.min.js"></script>
 
-    <script src="js/blogFunct.js"></script>
+    <script src="../js/blogFunct.js"></script>
 
-    <script src="js/dstabs.js"></script>
+    <script src="../js/dstabs.js"></script>
 
-    <script>
+<script>
   // Fetch data from the backend API
   async function fetchBusArrivals() {
     try {
@@ -312,10 +313,15 @@
       }
 
       const data = await response.json();
+      console.log('API Response:', data); // Debugging log
 
-      // Assuming the data contains an array of bus services and their departure times
       const tableBody = document.querySelector('table tbody');
       tableBody.innerHTML = ''; // Clear existing rows
+
+      if (!data.Services || data.Services.length === 0) {
+        tableBody.innerHTML = '<tr><td colspan="2">No data available</td></tr>';
+        return;
+      }
 
       data.Services.forEach((service) => {
         const row = document.createElement('tr');
@@ -327,6 +333,8 @@
       });
     } catch (error) {
       console.error('Error fetching bus arrivals:', error);
+      const tableBody = document.querySelector('table tbody');
+      tableBody.innerHTML = '<tr><td colspan="2">Error loading data</td></tr>';
     }
   }
 
