--- a/bat/bat.html
+++ b/bat/bat.html
@@ -32,6 +32,14 @@
 
 </head>
 
+<style>
+    #cv-about {
+    background-image: url("../img/bg-img/hero-bg-small.png");
+    height: 34vh;
+
+}
+</style>
+
 <body>
 
     <!-- Navigation Bar -->
