--- a/bat/bat.html
+++ b/bat/bat.html
@@ -34,10 +34,10 @@
 
 <style>
     #cv-about {
-    background-image: url("../img/bg-img/hero-bg-small.png");
-    height: 34vh;
+        background-image: url("../img/bg-img/hero-bg-small.png");
+        height: 34vh;
 
-}
+    }
 </style>
 
 <body>
@@ -193,12 +193,17 @@
                                 <div>
                                     <h1 class="page-title" id="filter-title">All Posts</h1>
                                 </div>
+                                <div style="position: relative; max-width: 400px; margin-top: 5px;">
+                                    <i class="fa-solid fa-search"
+                                        style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #cccccc; z-index: 1;"></i>
+                                    <input type="text" id="bus-stop-search" class="form-control"
+                                        placeholder=" Search for a Bus Stop" style="padding-left: 35px; width: 100%;">
+                                </div>
                             </div>
                         </div>
                     </div>
 
                 </div>
-
 
                 <!-- <div class="scrollable-tabs-container">
                     <div class="left-arrow">
@@ -241,20 +246,20 @@
     <section class="about-me-summ clearfix">
         <div class="container-xxl">
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Services</th>
-      <th scope="col">Departure Times</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Services</th>
+                        <th scope="col">Departure Times</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
 
-    </tr>
-  </tbody>
-</table>
-      
+                    </tr>
+                </tbody>
+            </table>
+
         </div>
     </section>
 
@@ -282,8 +287,8 @@
         </div>
     </footer>
 
-    <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
-        data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
+    <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
+        data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
@@ -308,42 +313,48 @@
     <script src="../js/dstabs.js"></script>
 
 <script>
-  // Fetch data from the backend API
-  async function fetchBusArrivals() {
-    try {
-      const response = await fetch('https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-arrivals');
-      if (!response.ok) {
-        throw new Error('Failed to fetch bus arrivals');
-      }
+    // Fetch data from the backend API
+    async function fetchBusArrivals() {
+        try {
+            const searchInput = document.getElementById('bus-stop-search').value.trim();
+            const queryParam = searchInput ? `?busStop=${encodeURIComponent(searchInput)}` : '';
+            const response = await fetch(`https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-arrivals${queryParam}`);
+            
+            if (!response.ok) {
+                throw new Error('Failed to fetch bus arrivals');
+            }
 
-      const data = await response.json();
-      console.log('API Response:', data); // Debugging log
+            const data = await response.json();
+            console.log('API Response:', data); // Debugging log
 
-      const tableBody = document.querySelector('table tbody');
-      tableBody.innerHTML = ''; // Clear existing rows
+            const tableBody = document.querySelector('table tbody');
+            tableBody.innerHTML = ''; // Clear existing rows
 
-      if (!data.Services || data.Services.length === 0) {
-        tableBody.innerHTML = '<tr><td colspan="2">No data available</td></tr>';
-        return;
-      }
+            if (!data.Services || data.Services.length === 0) {
+                tableBody.innerHTML = '<tr><td colspan="2">No data available</td></tr>';
+                return;
+            }
 
-      data.Services.forEach((service) => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${service.ServiceNo}</td>
-          <td>${service.NextBus.EstimatedArrival}</td>
-        `;
-        tableBody.appendChild(row);
-      });
-    } catch (error) {
-      console.error('Error fetching bus arrivals:', error);
-      const tableBody = document.querySelector('table tbody');
-      tableBody.innerHTML = '<tr><td colspan="2">Error loading data</td></tr>';
+            data.Services.forEach((service) => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${service.ServiceNo}</td>
+                    <td>${service.NextBus.EstimatedArrival}</td>
+                `;
+                tableBody.appendChild(row);
+            });
+        } catch (error) {
+            console.error('Error fetching bus arrivals:', error);
+            const tableBody = document.querySelector('table tbody');
+            tableBody.innerHTML = '<tr><td colspan="2">Error loading data</td></tr>';
+        }
     }
-  }
 
-  // Call the function to fetch and populate data
-  fetchBusArrivals();
+    // Add an event listener to the search input
+    document.getElementById('bus-stop-search').addEventListener('input', fetchBusArrivals);
+
+    // Initial call to fetch and populate data
+    fetchBusArrivals();
 </script>
 
 </body>
