--- a/bat/bat.html
+++ b/bat/bat.html
@@ -244,15 +244,15 @@
 
     <!-- Section Contents -->
     <section class="about-me-summ clearfix">
-        <div class="container-xxl">
+        <div class="container">
 
             <table class="table">
                 <thead>
                     <tr>
                         <th scope="col">Services</th>
-                        <th scope="col">Departure Times</th>
+                        <th scope="col" class="departure-spacing">Departure Times</th>
                         <th scope="col">Fleet Type</th>
-                        <th scope="col">Operator</th>
+                        <th class="operator-column" scope="col">Operator</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -261,6 +261,33 @@
                             <span class="bus-time"></span>
                             <span class="bus-time"></span>
                         </td>
+                    </tr>
+                </tbody>
+            </table>
+
+
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Services</th>
+                        <th scope="col" class="departure-spacing">Departure Times</th>
+                        <th scope="col">Fleet Type</th>
+                        <th class="operator-column" scope="col">Operator</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="svcNumtd">
+                            <p class="svcNum">302</p>
+                        </td>
+                        <td class="departure-spacing">
+                            <span class="bus-time">00:00</span>
+                            <span class="bus-time">00:01</span>
+                        </td>
+                        <td>
+                            <img src="assets/bd.png" alt="bd" style="width: 50px; height: auto;">
+                        </td>
+                        <td><img src="assets/smrt.png" alt="bd" class="operator-logo"></td>
                     </tr>
                 </tbody>
             </table>
@@ -316,88 +343,91 @@
 
     <script src="../js/dstabs.js"></script>
 
-<script>
-    // Fetch data from the backend API
-    async function fetchBusArrivals() {
-        try {
-            const searchInput = document.getElementById('bus-stop-search').value.trim();
-            const tableBody = document.querySelector('table tbody');
+    <script>
+        // Fetch data from the backend API
+        async function fetchBusArrivals() {
+            try {
+                const searchInput = document.getElementById('bus-stop-search').value.trim();
+                const tableBody = document.querySelector('table tbody');
 
-            // If no input, show a message and stop further execution
-            if (!searchInput) {
-                tableBody.innerHTML = '<tr><td colspan="4">Please type a Bus Stop Code</td></tr>';
-                return;
-            }
+                // If no input, show a message and stop further execution
+                if (!searchInput) {
+                    tableBody.innerHTML = '<tr><td colspan="4">Please type a Bus Stop Code</td></tr>';
+                    return;
+                }
 
-            const url = new URL('https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-arrivals');
+                const url = new URL('https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-arrivals');
 
-            // Append query parameters
-            url.searchParams.append('BusStopCode', searchInput);
+                // Append query parameters
+                url.searchParams.append('BusStopCode', searchInput);
 
-            const response = await fetch(url);
+                const response = await fetch(url);
 
-            if (!response.ok) {
-                throw new Error('Failed to fetch bus arrivals');
-            }
+                if (!response.ok) {
+                    throw new Error('Failed to fetch bus arrivals');
+                }
 
-            const data = await response.json();
-            console.log('API Response:', data); // Debugging log
+                const data = await response.json();
+                console.log('API Response:', data); // Debugging log
 
-            tableBody.innerHTML = ''; // Clear existing rows
+                tableBody.innerHTML = ''; // Clear existing rows
 
-            if (!data.Services || data.Services.length === 0) {
-                tableBody.innerHTML = '<tr><td colspan="4">No data available</td></tr>';
-                return;
-            }
+                if (!data.Services || data.Services.length === 0) {
+                    tableBody.innerHTML = '<tr><td colspan="4">No data available</td></tr>';
+                    return;
+                }
 
-            data.Services.forEach((service) => {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td>${service.ServiceNo}</td>
-                    <td><span class="bus-time">
-                        ${service.NextBus.EstimatedArrival ? formatArrivalTime(service.NextBus.EstimatedArrival) : 'N/A'}</span>
-                        <span class="bus-time">${service.NextBus2.EstimatedArrival ? formatArrivalTime(service.NextBus2.EstimatedArrival) : 'N/A'}</span>
-                    </td>
-                    <td>
-                        ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 50px; height: auto;">` : 'N/A'}
-                    </td>
-                    <td>${service.Operator}</td>
+                data.Services.forEach((service) => {
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                        <td class="svcNumtd">
+                            <p class="svcNum">${service.ServiceNo}</p>
+                        </td>
+                        <td class="departure-spacing">
+                            <span class="bus-time"> ${service.NextBus.EstimatedArrival ? formatArrivalTime(service.NextBus.EstimatedArrival) : 'N/A'}</span>
+                            <span class="bus-time">${service.NextBus2.EstimatedArrival ? formatArrivalTime(service.NextBus2.EstimatedArrival) : 'N/A'}</span>
+                        </td>
+                        <td>
+                            ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 50px; height: auto;">` : 'N/A'}
+                        </td>
+                        <td> 
+                            ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : 'N/A'}</td>
                 `;
-                tableBody.appendChild(row);
-            });
-        } catch (error) {
-            console.error('Error fetching bus arrivals:', error);
-            const tableBody = document.querySelector('table tbody');
-            tableBody.innerHTML = '<tr><td colspan="4">Error loading data</td></tr>';
+                    tableBody.appendChild(row);
+                });
+            } catch (error) {
+                console.error('Error fetching bus arrivals:', error);
+                const tableBody = document.querySelector('table tbody');
+                tableBody.innerHTML = '<tr><td colspan="4">Error loading data</td></tr>';
+            }
         }
-    }
 
-    // Add an event listener to the search input
-    document.getElementById('bus-stop-search').addEventListener('input', fetchBusArrivals);
+        // Add an event listener to the search input
+        document.getElementById('bus-stop-search').addEventListener('input', fetchBusArrivals);
 
-    // Initial call to show the default message
-    fetchBusArrivals();
+        // Initial call to show the default message
+        fetchBusArrivals();
 
-    // Refresh data every 30 seconds
-    setInterval(fetchBusArrivals, 30000);
+        // Refresh data every 30 seconds
+        setInterval(fetchBusArrivals, 30000);
 
-    // Function to format ISO string to hh:mm and show "Arr" if the time matches the current time
-    function formatArrivalTime(isoString) {
-        const date = new Date(isoString);
-        const hours = date.getHours().toString().padStart(2, '0'); // Ensure 2-digit format
-        const minutes = date.getMinutes().toString().padStart(2, '0'); // Ensure 2-digit format
-        const formattedTime = `${hours}:${minutes}`;
+        // Function to format ISO string to hh:mm and show "Arr" if the time matches the current time
+        function formatArrivalTime(isoString) {
+            const date = new Date(isoString);
+            const hours = date.getHours().toString().padStart(2, '0'); // Ensure 2-digit format
+            const minutes = date.getMinutes().toString().padStart(2, '0'); // Ensure 2-digit format
+            const formattedTime = `${hours}:${minutes}`;
 
-        // Get the current time in hh:mm format
-        const now = new Date();
-        const currentHours = now.getHours().toString().padStart(2, '0');
-        const currentMinutes = now.getMinutes().toString().padStart(2, '0');
-        const currentTime = `${currentHours}:${currentMinutes}`;
+            // Get the current time in hh:mm format
+            const now = new Date();
+            const currentHours = now.getHours().toString().padStart(2, '0');
+            const currentMinutes = now.getMinutes().toString().padStart(2, '0');
+            const currentTime = `${currentHours}:${currentMinutes}`;
 
-        // Compare the times and return "Arr" if they match
-        return formattedTime === currentTime ? 'Arr' : formattedTime;
-    }
-</script>
+            // Compare the times and return "Arr" if they match
+            return formattedTime === currentTime ? 'Arr' : formattedTime;
+        }
+    </script>
 
 </body>
 
