2025-11 Cumulative Update for Version 2511 (6.0.8)

--- a/bat/bat.html
+++ b/bat/bat.html
@@ -36,7 +36,6 @@
     #cv-about {
         background-image: url("../img/bg-img/hero-bg-small.png");
         height: 34vh;
-
     }
 </style>
 
@@ -46,36 +45,36 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+            <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">
+                    <a href="../index.html" class="nav-link">
                         <i class="fa-solid fa-house"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="about.html" class="nav-link">
+                    <a href="../about.html" class="nav-link">
                         <i class="fa-solid fa-circle-user"></i>
                         <span>About</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="works-by-nrfz.html" class="nav-link">
+                    <a href="../works-by-nrfz.html" class="nav-link">
                         <i class="fa-solid fa-pen-paintbrush"></i>
                         <span>Works By NRFZ</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="eicw/eicw.html" class="nav-link">
+                    <a href="../eicw/eicw.html" class="nav-link">
                         <i class="fa-solid fa-map-location"></i>
                         <span>EICW</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="../blog.html" class="nav-link">
                         <i class="fa-solid fa-comment"></i>
                         <span>Blog</span>
                     </a>
@@ -123,31 +122,31 @@
 
         <ul class="mobile-menu-nav">
             <li class="mobile-menu-item">
-                <a href="index.html" class="mobile-menu-link">
+                <a href="../index.html" class="mobile-menu-link">
                     <i class="fa-solid fa-regular fa-house"></i>
                     <span>Home</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="#" class="mobile-menu-link">
+                <a href="../about.html" class="mobile-menu-link">
                     <i class="fa-solid fa-regular fa-circle-user"></i>
                     <span>About</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="works-by-nrfz.html" class="mobile-menu-link">
+                <a href="../works-by-nrfz.html" class="mobile-menu-link">
                     <i class="fa-solid fa-pen-paintbrush"></i>
                     <span>Works By NRFZ</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="eicw/eicw.html" class="mobile-menu-link">
+                <a href="../eicw/eicw.html" class="mobile-menu-link">
                     <i class="fa-solid fa-map-location"></i>
                     <span>EICW</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="blog.html" class="mobile-menu-link active">
+                <a href="../blog.html" class="mobile-menu-link active">
                     <i class="fa-solid fa-comment"></i>
                     <span>Blog</span>
                 </a>
@@ -204,37 +203,6 @@
                     </div>
 
                 </div>
-
-                <!-- <div class="scrollable-tabs-container">
-                    <div class="left-arrow">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
-                        </svg>
-                    </div>
-
-                    <ul>
-                        <li>
-                            <a href="#" class="btn-filter-blog active" data-filter="*">All Posts</a>
-                        </li>
-
-                        <li>
-                            <a href="#" class="btn-filter-blog" data-filter=".wbd">Website Design</a>
-                        </li>
-
-                        <li>
-                            <a href="#" class="btn-filter-blog" data-filter=".wfd">Wayfinding Design</a>
-                        </li>
-                    </ul>
-
-                    <div class="right-arrow active">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
-                        </svg>
-
-                    </div>
-                </div> -->
                 <hr>
             </div>
 
@@ -249,7 +217,7 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th scope="col">Services</th>
+                        <th scope="col" class="svc-spacing">Services</th>
                         <th scope="col" class="departure-spacing">Departure Times</th>
                         <th class="operator-column" scope="col">Operator</th>
                     </tr>
@@ -263,34 +231,6 @@
                     </tr>
                 </tbody>
             </table>
-
-
-            <!-- <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Services</th>
-                        <th scope="col" class="departure-spacing">Departure Times</th>
-                        <th scope="col">Fleet Type</th>
-                        <th class="operator-column" scope="col">Operator</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="svcNumtd">
-                            <p class="svcNum">302</p>
-                        </td>
-                        <td class="departure-spacing">
-                            <span class="bus-time">00:00</span>
-                            <span class="bus-time">00:01</span>
-                        </td>
-                        <td>
-                            <img src="assets/bd.png" alt="bd" style="width: 50px; height: auto;">
-                        </td>
-                        <td><img src="assets/smrt.png" alt="bd" class="operator-logo"></td>
-                    </tr>
-                </tbody>
-            </table> -->
-
         </div>
     </section>
 
@@ -325,7 +265,7 @@
 
     <script src="../js/navtabs.js"></script>
 
-    <script src="../js/theme-subPages.js"></script>
+    <script src="bat.js"></script>
 
     <script src="../js/jquery.min.js"></script>
 
@@ -351,7 +291,7 @@
 
                 // If no input, show a message and stop further execution
                 if (!searchInput) {
-                    tableBody.innerHTML = '<tr><td colspan="4">Please type a Bus Stop Code</td></tr>';
+                    tableBody.innerHTML = '<tr class="message"><td colspan="4">Enter Bus Stop Code</td></tr>';
                     return;
                 }
 
@@ -383,14 +323,14 @@
                             <p class="svcNum">${service.ServiceNo}</p>
                         </td>
                         <td class="departure-spacing">
-                            <span class="bus-time">${service.NextBus.EstimatedArrival ? formatArrivalTime(service.NextBus.EstimatedArrival) : 'N/A'} &nbsp; ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : 'N/A'}
+                            <span class="bus-time">${service.NextBus.EstimatedArrival ? formatArrivalTime(service.NextBus.EstimatedArrival) : '-'} &nbsp; ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}
                             </span>
 
-                            <span class="bus-time">${service.NextBus2.EstimatedArrival ? formatArrivalTime(service.NextBus2.EstimatedArrival) : 'N/A'}&nbsp; ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : 'N/A'}
+                            <span class="bus-time">${service.NextBus2.EstimatedArrival ? formatArrivalTime(service.NextBus2.EstimatedArrival) : ''} &nbsp; ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}
                             </span>
 
                         <td> 
-                            ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : 'N/A'}</td>
+                            ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : ''}</td>
                 `;
                     tableBody.appendChild(row);
                 });
