--- a/blog.html
+++ b/blog.html
@@ -121,7 +121,7 @@
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="#" class="mobile-menu-link">
+                <a href="about.html" class="mobile-menu-link">
                     <i class="fa-solid fa-regular fa-circle-user"></i>
                     <span>About</span>
                 </a>
