--- a/bat/bat.html
+++ b/bat/bat.html
@@ -213,6 +213,11 @@
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
+            <div class="fleet-legend">
+                <span><img src="assets/dd.png" alt="BD Icon" class="fleet-icon"> Double</span>
+                <span><img src="assets/bd.png" alt="SMRT Icon" class="fleet-icon"> Bendy</span>
+                <span><img src="assets/sd.png" alt="Other Icon" class="fleet-icon"> Single</span>
+            </div>
 
             <table class="table">
                 <thead>
